--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -1305,3 +1305,91 @@
     attribute: priority
     modifierType: delta
     value: 1
+# 飞旋: 使用飞旋之光时,额外添加5点怒气
+- id: effect_emblem_add_rage_5_when_use_feixuanzhiguang
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addRage
+    target: self
+    value: 5
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: useSkillContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: skill
+            - type: select
+              arg:
+                type: base
+                arg: baseId
+        evaluator:
+          type: same
+          value: skill_feixuanzhiguang
+# 沙阵: 沙暴阵提升的闪避率添加5%
+- id: effect_emblem_shabaozhen_plus_5_percent_dodge
+  trigger: OnBattleStart
+  priority: 0
+  apply:
+    type: addConfigModifier
+    target: self
+    configKey: effect_mark_increase_evasion_15_percent.evasion_increase
+    modifierType: delta
+    value: 5
+# 虫群: 虫群环境下,连击技能的技能消耗减少5
+- id: effect_emblem_reduce_5_rage_cost_in_field_chongqun
+  trigger: BeforeUseSkillCheck
+  priority: 0
+  apply:
+    type: addValue
+    target:
+      base: useSkillContext
+      chain:
+        - type: selectProp
+          arg: rage
+    value: -5
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: useSkillContext
+          chain:
+            - type: selectPath
+              arg: multihitResult
+        evaluator:
+          type: compare
+          operator: '>'
+          value: 1
+      - type: evaluate
+        target:
+          base: useSkillContext
+          chain:
+            - type: selectPath
+              arg: skill.base.category
+        evaluator:
+          type: same
+          value: Climax
+      - type: evaluate
+        target:
+          base: battle
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: marks
+            - type: flat
+            - type: whereAttr
+              extractor: baseId
+              evaluator:
+                type: same
+                value: mark_global_chongqun
+        evaluator:
+          type: exist
