--- a/data/species.yaml
+++ b/data/species.yaml
@@ -3064,7 +3064,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -3106,7 +3106,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -3182,7 +3182,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -3258,7 +3258,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -3334,7 +3334,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -3409,7 +3409,7 @@
     - skill_id: skill_zhongji
       level: 5
       hidden: false
-    - skill_id: skill_tisusu
+    - skill_id: skill_tisu
       level: 10
       hidden: false
     - skill_id: skill_yitelingyu
@@ -7353,3 +7353,213 @@
     - mark_ability_cuimian
   emblem:
     - mark_emblem_zimian
+
+- id: pet_feiyite
+  num: 97
+  element: Flying
+  baseStats:
+    hp: 179
+    atk: 168
+    def: 162
+    spa: 182
+    spd: 162
+    spe: 164
+  genderRatio: [5, 5]
+  heightRange: [65, 70]
+  weightRange: [28, 33]
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_zhongji
+      level: 5
+      hidden: false
+    - skill_id: skill_tisu
+      level: 9
+      hidden: false
+    - skill_id: skill_yitelingyu
+      level: 13
+      hidden: false
+    - skill_id: skill_yiteguanghuan
+      level: 17
+      hidden: false
+    - skill_id: skill_yitejieji
+      level: 21
+      hidden: false
+    - skill_id: skill_feixuanzhiyu
+      level: 24
+      hidden: false
+    - skill_id: skill_jikongyu
+      level: 29
+      hidden: false
+    - skill_id: skill_feikongnengliang
+      level: 34
+      hidden: false
+    - skill_id: skill_jikongzhan
+      level: 40
+      hidden: false
+    - skill_id: skill_feixuanzhen
+      level: 46
+      hidden: false
+    - skill_id: skill_feixuanzhiguang
+      level: 52
+      hidden: false
+    - skill_id: skill_feikongluoxuanzhan
+      level: 60
+      hidden: true
+    - skill_id: skill_feizhilingyu
+      level: 60
+      hidden: true
+    - skill_id: skill_feitianguangren
+      level: 60
+      hidden: true
+    - skill_id: skill_feikongjingneng
+      level: 60
+      hidden: true
+    - skill_id: skill_miewangsanjiaozhen
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_feikong
+  emblem:
+    - mark_emblem_feixuan
+
+- id: pet_shayite
+  num: 98
+  element: Desert
+  baseStats:
+    hp: 178
+    atk: 180
+    def: 164
+    spa: 166
+    spd: 161
+    spe: 163
+  genderRatio: [5, 5]
+  heightRange: [63, 68]
+  weightRange: [23, 28]
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_zhongji
+      level: 5
+      hidden: false
+    - skill_id: skill_tisu
+      level: 9
+      hidden: false
+    - skill_id: skill_yitelingyu
+      level: 13
+      hidden: false
+    - skill_id: skill_yiteguanghuan
+      level: 17
+      hidden: false
+    - skill_id: skill_yitejieji
+      level: 21
+      hidden: false
+    - skill_id: skill_shachenjiejie
+      level: 24
+      hidden: false
+    - skill_id: skill_shaxuanwo
+      level: 29
+      hidden: false
+    - skill_id: skill_jisushanji
+      level: 34
+      hidden: false
+    - skill_id: skill_shachenzhili
+      level: 40
+      hidden: false
+    - skill_id: skill_shabaozhen
+      level: 46
+      hidden: false
+    - skill_id: skill_shalieshe
+      level: 52
+      hidden: false
+    - skill_id: skill_baolieluoshajiao
+      level: 60
+      hidden: true
+    - skill_id: skill_shazhilingyu
+      level: 60
+      hidden: true
+    - skill_id: skill_shabaozhan
+      level: 60
+      hidden: true
+    - skill_id: skill_mizongbu
+      level: 60
+      hidden: true
+    - skill_id: skill_miewangsanjiaozhen
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_shasu
+  emblem:
+    - mark_emblem_shazhen
+
+- id: pet_chongyite
+  num: 99
+  element: Bug
+  baseStats:
+    hp: 180
+    atk: 167
+    def: 161
+    spa: 181
+    spd: 163
+    spe: 159
+  genderRatio: [5, 5]
+  heightRange: [62, 67]
+  weightRange: [25, 30]
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_zhongji
+      level: 5
+      hidden: false
+    - skill_id: skill_tisu
+      level: 9
+      hidden: false
+    - skill_id: skill_yitelingyu
+      level: 13
+      hidden: false
+    - skill_id: skill_yiteguanghuan
+      level: 17
+      hidden: false
+    - skill_id: skill_yitejieji
+      level: 21
+      hidden: false
+    - skill_id: skill_heicilianji
+      level: 24
+      hidden: false
+    - skill_id: skill_xixuelianji
+      level: 29
+      hidden: false
+    - skill_id: skill_chongqunzhixin
+      level: 34
+      hidden: false
+    - skill_id: skill_fushilianji
+      level: 40
+      hidden: false
+    - skill_id: skill_chongqunzhen
+      level: 46
+      hidden: false
+    - skill_id: skill_dugulianji
+      level: 52
+      hidden: false
+    - skill_id: skill_yalianbengxici
+      level: 60
+      hidden: false
+    - skill_id: skill_chongzhilingyu
+      level: 60
+      hidden: true
+    - skill_id: skill_xueji
+      level: 60
+      hidden: true
+    - skill_id: skill_chongqundajun
+      level: 60
+      hidden: true
+    - skill_id: skill_miewangsanjiaozhen
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_lianxie
+  emblem:
+    - mark_emblem_chongqun
