--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -230,10 +230,22 @@ mark_dongqifuti: 'https://seer2-resource.yuuinih.com/png/markImage/3120.png'
 mark_hanbinghujia: 'https://seer2-resource.yuuinih.com/png/markImage/4010.png'
 mark_fansheguike: 'https://seer2-resource.yuuinih.com/png/markImage/4009.png'
 mark_huijiachifan: 'https://seer2-resource.yuuinih.com/png/markImage/3130.png'
-mark_penti: "https://seer2-resource.yuuinih.com/png/markImage/3095.png"
-mark_qianglipenti: "https://seer2-resource.yuuinih.com/png/markImage/3096.png"
-mark_chaojipenti: "https://seer2-resource.yuuinih.com/png/markImage/3097.png"
-mark_fasibilei: "https://seer2-resource.yuuinih.com/png/markImage/3098.png"
-mark_cuimian: "https://seer2-resource.yuuinih.com/png/markImage/3094.png"
-mark_jingshenshikong: "https://seer2-resource.yuuinih.com/png/markImage/3093.png"
-mark_niandongfanshe: "https://seer2-resource.yuuinih.com/png/markImage/4008.png"
+mark_penti: 'https://seer2-resource.yuuinih.com/png/markImage/3095.png'
+mark_qianglipenti: 'https://seer2-resource.yuuinih.com/png/markImage/3096.png'
+mark_chaojipenti: 'https://seer2-resource.yuuinih.com/png/markImage/3097.png'
+mark_fasibilei: 'https://seer2-resource.yuuinih.com/png/markImage/3098.png'
+mark_cuimian: 'https://seer2-resource.yuuinih.com/png/markImage/3094.png'
+mark_jingshenshikong: 'https://seer2-resource.yuuinih.com/png/markImage/3093.png'
+mark_niandongfanshe: 'https://seer2-resource.yuuinih.com/png/markImage/4008.png'
+mark_feixuanzhen: 'https://seer2-resource.yuuinih.com/png/markImage/3217.png'
+mark_feizhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3218.png'
+mark_feikonglingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3219.png'
+mark_shazhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3220.png'
+mark_shabaolingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3221.png'
+mark_shabaozhen: 'https://seer2-resource.yuuinih.com/png/markImage/3222.png'
+mark_shanbiwugong: 'https://seer2-resource.yuuinih.com/png/markImage/3223.png'
+mark_chongqunzhen: 'https://seer2-resource.yuuinih.com/png/markImage/3224.png'
+mark_lianji: 'https://seer2-resource.yuuinih.com/png/markImage/3225.png'
+mark_chongzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3226.png'
+mark_chongqunlingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3227.png'
+mark_global_chongqun: 'https://seer2-resource.yuuinih.com/png/markImage/20011.png'
