--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -357,7 +357,7 @@ skill_xuanwotuxi: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
 skill_xuanwochuantou: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_003.mp3'
 skill_xuanwozhadan: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
 skill_xukongtizhi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
-skill_tisusu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_tisu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_yitelingyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_yiteguanghuan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
 skill_yitejieji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
@@ -851,3 +851,34 @@ skill_jingshenguangbo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.
 skill_emengqinxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_ziwocuimian: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_shiyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_feixuanzhiyu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_jikongyu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_feikongnengliang: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_jikongzhan: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_feixuanzhen: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_feixuanzhiguang: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_feikongluoxuanzhan: 'https://seer2-resource.yuuinih.com/sound/skill/11230.mp3'
+skill_feizhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_feitianguangren: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_feikongjingneng: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_miewangsanjiaozhen: 'https://seer2-resource.yuuinih.com/sound/skill/11234.mp3'
+skill_shachenjiejie: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shaxuanwo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_jisushanji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shachenzhili: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_shabaozhen: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_shalieshe: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_baolieluoshajiao: 'https://seer2-resource.yuuinih.com/sound/skill/11241.mp3'
+skill_shazhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_shabaozhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_mizongbu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_heicilianji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_001.mp3'
+skill_xixuelianji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_chongqunzhixin: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_001.mp3'
+skill_fushilianji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_chongqunzhen: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_002.mp3'
+skill_dugulianji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_yalianbengxici: 'https://seer2-resource.yuuinih.com/sound/skill/11251.mp3'
+skill_chongzhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_002.mp3'
+skill_xueji: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_chongqundajun: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_001.mp3'
